2012-07-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.elements.php,
	include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	include/functions_visual_map_editor.php: uploaded some fixes and
	changes for the visualmap, for example refactored some part of
	print the visualmap in operation.
	
	* include/functions_html.php: fixed when included from standarlone
	file from enterprise structure directory.
	
	* include/constants.php: added constants for avoid magic numbers
	into the code of Visualmaps.
	
	* include/graphs/functions_gd.php, include/functions.php,
	include/functions_io.php, include/functions_modules.php,
	include/functions_ui.php: cleaned source code style.

2012-07-06  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	godmode/users/configure_user.php: Changed some last fields
	of the wizard level, metaconsole access etc. And interface
	strings for metaconsole access in user edition

2012-07-06  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/configure_user.php: Added wizard access 
	option to users editor

2012-07-05  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql: Assign to the 
	default user (admin) the full access to 
	wizard (new metaconsole)

2012-07-05  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_v3.1_to_v3.2.sql
	extras/pandoradb_migrate_v3.2_to_v4.0.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Added fields to