@@ -276,7 +276,7 @@ WHERE token='prominent_time'
 
 ALTER TABLE tnetwork_component ADD (wizard_level VARCHAR2(100) default 'custom' NOT NULL);
 ALTER TABLE tnetwork_component ADD CONSTRAINT t_network_component_wizard_level_cons CHECK (wizard_level IN ('basic','advanced','custom','nowizard'));
-ALTER TABLE tnetwork_component ADD (only_wizard NUMBER(5, 0) default 0 NOT NULL);
+ALTER TABLE tnetwork_component ADD (only_metaconsole NUMBER(5, 0) default 0 NOT NULL);
 ALTER TABLE tnetwork_component ADD (field1_desc CLOB default '');
 ALTER TABLE tnetwork_component ADD (field1_help CLOB default '');
 ALTER TABLE tnetwork_component ADD (field2_desc CLOB default '');
